<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.itachi.bullsandcows.GameMainFragment"
    android:background="@drawable/border"
    android:padding="3dp">

    <!-- TODO: Update blank fragment layout -->

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameMainGridLayout"
        android:layout_gravity="center_horizontal"
        android:padding="3dp"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bulls"
            android:id="@+id/bullsView"
            android:layout_row="0"
            android:layout_column="0"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cows"
            android:id="@+id/cowsView"
            android:layout_row="0"
            android:layout_column="1"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="2"
            android:id="@+id/bullsViewNo"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="2"
            android:id="@+id/cowsViewNo"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/score"
            android:id="@+id/scoreView"
            android:layout_row="0"
            android:layout_column="2"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="5"
            android:id="@+id/scoreViewNo"
            android:layout_row="1"
            android:layout_column="2"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/inputText"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:hint="@string/enter_your_guess"
            android:textSize="15sp"
            android:inputType="number" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:id="@+id/checkButton"
            android:layout_row="2"
            android:layout_column="2"
            android:textSize="20dp" />


    </GridLayout>
</FrameLayout>
